--- a/src/main/resources/CSS/style.css
+++ b/src/main/resources/CSS/style.css
@@ -1,25 +1,44 @@
 .button{
-    -fx-background-color: #07f0aa;
+    -fx-background-color: #11afd6;
     -fx-background-radius: 0em;
 }
 .button:hover{
-    -fx-background-color: #6df2b9;
+    -fx-background-color: #10bbe6;
 }
 .button:pressed{
-    -fx-background-color: #39ad7b;
+    -fx-background-color: #02c8fa;
 }
 .button:focused{
-    -fx-background-color: #39ad7b;
-    -fx-border-color: #966614;
+    -fx-background-color: #02c8fa;
+    -fx-border-color: black;
     -fx-border-width: 0px 0px 0px 3px;
 }
+
+.button2{
+    -fx-background-color: #FFFFFF;
+    -fx-background-radius: 1px 1px 1px 1px;
+    -fx-fill-color: #FFFFFF;
+    -fx-border-width: 1px 1px 1px 1px;
+}
+.button2:hover{
+    -fx-background-color: #FFFFFF;
+    -fx-border-color: black;
+}
+.button2:pressed{
+    -fx-background-color: #39ad7b;
+}
+.button2:focused{
+    -fx-background-color: #7D6CC8;
+    -fx-background-radius: 1px 1px 1px 1px;
+    -fx-fill-color: #FFFFFF;
+}
+
 .table-view .column-header,
 .table-view .column-header-background .filler{
     -fx-cell-size: 20;
-    -fx-background-color: #7156DD;
+    -fx-background-color:  #0acbf2;
 }
 .table-view .column-header .label{
-    -fx-text-fill: white;
     -fx-font-weight: bold;
     -fx-alignment: CENTER_LEFT;
 }
@@ -49,20 +68,49 @@
     -fx-background-insets: 2em;
 }
 
-.chart{
-    -fx-padding: 10px;
-    -fx-background-color: transparent;
-    -fx-legend-visible: false;
-}
-.chart-plot-background{
-    -fx-background-color: transparent;
-}
+/*.chart{*/
+/*    -fx-padding: 10px;*/
+/*    -fx-background-color: transparent;*/
+/*    -fx-legend-visible: false;*/
+/*}*/
+/*.chart-plot-background{*/
+/*    -fx-background-color: transparent;*/
+/*}*/
 
-.chart-pie{
-    -fx-background-color: derive(-fx-pie-color, 1%);
-    -fx-border-width: 0px;
-}
+/*.chart-pie{*/
+/*    -fx-background-color: derive(-fx-pie-color, 1%);*/
+/*    -fx-border-width: 0px;*/
+/*}*/
 
 .top{
     -fx-border-width: 100%;
+}
+
+.tab-pane{
+    -fx-opacity: 0;
+}
+
+.tab-pane{
+    -fx-tab-min-width: 90px;
+    -fx-tab-min-height: 30px;
+}
+
+.tab{
+    -fx-background-insets: 0 0 0 0,0,0;
+}
+
+.tab-pane .tab{
+    -fx-background-color: white;
+}
+
+.tab-pane .pane:selected{
+    -fx-background-color: white;
+    -fx-text-fill: #6F5CC2;
+    -fx-border-color: #6F5CC2;
+    -fx-border-width: 0px 0px 3px 0px;
+}
+
+.tab .tab-label{
+    -fx-alignment: CENTER;
+    -fx-text-fill: #6F5CC2;
 }
