--- a/src/main/resources/com/example/przychodniastomatologicznav2/main.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/main.fxml
@@ -1,16 +1,204 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.przychodniastomatologicznav2.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.przychodniastomatologicznav2.Controller">
+    <children>
+        <BorderPane prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <left>
+                <VBox prefHeight="500.0" prefWidth="191.0" style="-fx-background-color: #11afd6;" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+                    <children>
+                        <Button fx:id="btnWizyty" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="234.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="56.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Wizyty">
+                            <graphic>
+                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Images/calendar.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <padding>
+                                <Insets left="30.0" />
+                            </padding>
+                        </Button>
+                        <Button fx:id="btnPacjenci" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="56.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Pacjenci">
+                            <graphic>
+                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Images/group-chat.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <padding>
+                                <Insets left="30.0" />
+                            </padding>
+                        </Button>
+                        <Button fx:id="btnLekarze" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="66.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="56.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Lekarze">
+                            <graphic>
+                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Images/doctor2.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <padding>
+                                <Insets left="30.0" />
+                            </padding>
+                        </Button>
+                        <Button fx:id="btnCennik" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="122.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="56.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Cennik">
+                            <graphic>
+                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Images/price-tag.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <padding>
+                                <Insets left="30.0" />
+                            </padding>
+                        </Button>
+                        <Button fx:id="btnStatystyki" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="56.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Statystyki">
+                            <graphic>
+                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Images/diagram.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <padding>
+                                <Insets left="30.0" />
+                            </padding>
+                        </Button>
+                    </children>
+                </VBox>
+            </left>
+            <top>
+                <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="1001.0" style="-fx-background-color: whote;" styleClass="table-view" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+               <children>
+                  <ImageView fitHeight="58.0" fitWidth="118.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../Images/logo-smaller-version.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </ImageView>
+               </children></HBox>
+            </top>
+         <center>
+            <TabPane fx:id="tabStatus" BorderPane.alignment="CENTER">
+               <tabs>
+                  <Tab text="Kanałowe">
+                     <content>
+                        <AnchorPane stylesheets="@../../../CSS/style.css">
+                           <children>
+                              <BorderPane prefHeight="508.0" prefWidth="809.0" stylesheets="@../../../CSS/style.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <top>
+                                    <HBox prefHeight="66.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Label fx:id="labelStatus" prefHeight="30.0" prefWidth="91.0" text="Wizyty">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="btnStatusLewy" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Dodaj wizytę" />
+                                          <TextField prefHeight="25.0" prefWidth="115.0" promptText="Imię" />
+                                          <TextField layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="132.0" promptText="Nazwisko" />
+                                          <DatePicker prefHeight="25.0" prefWidth="154.0" promptText="Data początkowa" />
+                                          <DatePicker prefHeight="25.0" prefWidth="155.0" promptText="Data końcowa" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                       </padding>
+                                    </HBox>
+                                 </top>
+                                 <center>
+                                    <TableView prefHeight="403.0" prefWidth="810.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+                                      <columns>
+                                        <TableColumn prefWidth="110.0" text="Imię" />
+                                        <TableColumn minWidth="0.0" prefWidth="115.0" text="Nazwisko" />
+                                          <TableColumn prefWidth="150.0" text="PESEL" />
+                                          <TableColumn minWidth="0.0" prefWidth="174.0" text="Data wizyty" />
+                                          <TableColumn minWidth="0.0" prefWidth="98.0" text="Cena" />
+                                          <TableColumn minWidth="0.0" prefWidth="250.0" text="Numer telefonu" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Higienizacja">
+                     <content>
+                        <AnchorPane stylesheets="@../../../CSS/style.css">
+                           <children>
+                              <BorderPane prefHeight="508.0" prefWidth="809.0" stylesheets="@../../../CSS/style.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <top>
+                                    <HBox prefHeight="66.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Label prefHeight="44.0" prefWidth="81.0" text="Wizyty">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Dodaj wizytę" />
+                                          <TextField prefHeight="25.0" prefWidth="115.0" promptText="Imię" />
+                                          <TextField layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="132.0" promptText="Nazwisko" />
+                                          <DatePicker prefHeight="25.0" prefWidth="154.0" promptText="Data początkowa" />
+                                          <DatePicker prefHeight="25.0" prefWidth="155.0" promptText="Data końcowa" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                       </padding>
+                                    </HBox>
+                                 </top>
+                                 <center>
+                                    <TableView prefHeight="403.0" prefWidth="810.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+                                       <columns>
+                                          <TableColumn prefWidth="110.0" text="Imię" />
+                                          <TableColumn minWidth="0.0" prefWidth="115.0" text="Nazwisko" />
+                                          <TableColumn prefWidth="150.0" text="PESEL" />
+                                          <TableColumn minWidth="0.0" prefWidth="174.0" text="Data wizyty" />
+                                          <TableColumn minWidth="0.0" prefWidth="98.0" text="Cena" />
+                                          <TableColumn minWidth="0.0" prefWidth="250.0" text="Numer telefonu" />
+                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
+         </center>
+        </BorderPane>
+    </children>
+</AnchorPane>
