--- a/src/main/resources/CSS/style.css
+++ b/src/main/resources/CSS/style.css
@@ -14,24 +14,6 @@
     -fx-border-width: 0px 0px 0px 3px;
 }
 
-.button2{
-    -fx-background-color: #FFFFFF;
-    -fx-background-radius: 1px 1px 1px 1px;
-    -fx-fill-color: #FFFFFF;
-    -fx-border-width: 1px 1px 1px 1px;
-}
-.button2:hover{
-    -fx-background-color: #FFFFFF;
-    -fx-border-color: black;
-}
-.button2:pressed{
-    -fx-background-color: #39ad7b;
-}
-.button2:focused{
-    -fx-background-color: #7D6CC8;
-    -fx-background-radius: 1px 1px 1px 1px;
-    -fx-fill-color: #FFFFFF;
-}
 
 .table-view .column-header,
 .table-view .column-header-background .filler{
@@ -50,7 +32,7 @@
 }
 
 .table-row-cell:selected{
-    -fx-background-color: rgb(127, 172, 243);
+    -fx-background-color: #3681d6;
 }
 .table-row-cell:selected .text{
     -fx-fill: white;
@@ -61,56 +43,10 @@
     -fx-background-radius: 2em;
 }
 
-.table-view .scroll-bar:horizontal .track,
-.table-view .scroll-bar:vertical .track{
-    -fx-background-color:derive(#7156DD, 90%);
-    -fx-background-insets: 2, 0, 0;
-    -fx-background-insets: 2em;
-}
 
-/*.chart{*/
-/*    -fx-padding: 10px;*/
-/*    -fx-background-color: transparent;*/
-/*    -fx-legend-visible: false;*/
-/*}*/
-/*.chart-plot-background{*/
-/*    -fx-background-color: transparent;*/
-/*}*/
-
-/*.chart-pie{*/
-/*    -fx-background-color: derive(-fx-pie-color, 1%);*/
-/*    -fx-border-width: 0px;*/
-/*}*/
 
 .top{
     -fx-border-width: 100%;
 }
 
-.tab-pane{
-    -fx-opacity: 0;
-}
 
-.tab-pane{
-    -fx-tab-min-width: 90px;
-    -fx-tab-min-height: 30px;
-}
-
-.tab{
-    -fx-background-insets: 0 0 0 0,0,0;
-}
-
-.tab-pane .tab{
-    -fx-background-color: white;
-}
-
-.tab-pane .pane:selected{
-    -fx-background-color: white;
-    -fx-text-fill: #6F5CC2;
-    -fx-border-color: #6F5CC2;
-    -fx-border-width: 0px 0px 3px 0px;
-}
-
-.tab .tab-label{
-    -fx-alignment: CENTER;
-    -fx-text-fill: #6F5CC2;
-}
