--- a/src/main/resources/com/example/przychodniastomatologicznav2/lekarze.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/lekarze.fxml
@@ -2,48 +2,76 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.przychodniastomatologicznav2.controllers.LekarzeController">
    <children>
       <BorderPane prefHeight="508.0" prefWidth="809.0" stylesheets="@../../../CSS/style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox prefHeight="66.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="91.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelStatus" prefHeight="30.0" prefWidth="91.0" text="Lekarze">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Button fx:id="btnStatusLewy" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Dodaj lekarza" />
-                  <TextField prefHeight="25.0" prefWidth="115.0" promptText="Imię" />
-                  <TextField layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="132.0" promptText="Nazwisko" />
-                  <DatePicker prefHeight="25.0" prefWidth="154.0" promptText="Data początkowa" />
-                  <DatePicker prefHeight="25.0" prefWidth="155.0" promptText="Data końcowa" />
+                  <VBox prefHeight="104.0" prefWidth="111.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#AddDoctor" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #0fdba8;" text="Dodaj lekarza">
+                           <VBox.margin>
+                              <Insets top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#EditDoctor" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #fcba03;" text="Edytuj lekarza">
+                           <VBox.margin>
+                              <Insets top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#DeleteDoctor" prefHeight="25.0" prefWidth="103.0" style="-fx-background-color: #f54269;" text="Usuń lekarza">
+                           <VBox.margin>
+                              <Insets top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+                  <TextField fx:id="idLekTxt" prefHeight="25.0" prefWidth="53.0" promptText="id">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin></TextField>
+                  <TextField fx:id="imieLekTxt" layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="126.0" promptText="imie">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin></TextField>
+                  <TextField fx:id="nazwiskoLekTxt" layoutX="367.0" layoutY="30.0" prefHeight="25.0" prefWidth="132.0" promptText="nazwisko">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <TextField fx:id="specLekTxt" layoutX="509.0" layoutY="30.0" prefHeight="25.0" prefWidth="175.0" promptText="specjalność">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <TextField fx:id="numerTelLekTxt" layoutX="560.0" layoutY="30.0" prefHeight="25.0" prefWidth="132.0" promptText="numer telefonu">
+                     <HBox.margin>
+                        <Insets top="4.0" />
+                     </HBox.margin>
+                  </TextField>
                </children>
                <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
                </padding>
             </HBox>
          </top>
          <center>
-            <TableView prefHeight="403.0" prefWidth="810.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+            <TableView fx:id="tableViewLekarze" onMouseClicked="#getSelected" prefHeight="403.0" prefWidth="810.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
                <columns>
-                  <TableColumn prefWidth="110.0" text="Imię" />
-                  <TableColumn minWidth="0.0" prefWidth="115.0" text="Nazwisko" />
-                  <TableColumn prefWidth="150.0" text="PESEL" />
-                  <TableColumn minWidth="0.0" prefWidth="174.0" text="Data wizyty" />
-                  <TableColumn minWidth="0.0" prefWidth="98.0" text="Cena" />
-                  <TableColumn minWidth="0.0" prefWidth="250.0" text="Numer telefonu" />
+                  <TableColumn fx:id="idLekarzaCol" prefWidth="110.0" text="Id lekarza" />
+                  <TableColumn fx:id="imieLekarzaCol" prefWidth="110.0" text="Imię" />
+                  <TableColumn fx:id="nazwiskoLekarzaCol" minWidth="0.0" prefWidth="115.0" text="Nazwisko" />
+                  <TableColumn fx:id="specialnoscLakarzaCol" minWidth="0.0" prefWidth="174.0" text="Specjalność" />
+                  <TableColumn fx:id="nrTelefonuCol" minWidth="0.0" prefWidth="250.0" text="Numer telefonu" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
