--- a/src/main/resources/com/example/przychodniastomatologicznav2/pacjenci.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/pacjenci.fxml
@@ -2,31 +2,59 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.przychodniastomatologicznav2.controllers.PacjenciController">
    <children>
       <BorderPane prefHeight="508.0" prefWidth="809.0" stylesheets="@../../../CSS/style.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox prefHeight="66.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="101.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="labelStatus" prefHeight="30.0" prefWidth="91.0" text="Pacjenci">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Button fx:id="btnStatusLewy" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Dodaj pacjenta" />
-                  <TextField prefHeight="25.0" prefWidth="115.0" promptText="Imię" />
-                  <TextField layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="132.0" promptText="Nazwisko" />
-                  <DatePicker prefHeight="25.0" prefWidth="154.0" promptText="Data urodzenia" />
+                  <VBox prefHeight="110.0" prefWidth="129.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#Add" prefHeight="25.0" prefWidth="124.0" style="-fx-background-color: #0fdba8;" text="Dodaj pacjenta">
+                           <VBox.margin>
+                              <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#Edit" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: #fcba03;" text="Edytuj pacjenta">
+                           <VBox.margin>
+                              <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button layoutX="10.0" layoutY="35.0" mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: #f54269;" text="Usuń pacjenta">
+                           <VBox.margin>
+                              <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+                  <HBox prefHeight="99.0" prefWidth="183.0">
+                     <children>
+                        <VBox prefHeight="100.0" prefWidth="187.0">
+                           <children>
+                              <TextField fx:id="idPacTxt" promptText="Id" />
+                              <TextField fx:id="nazwiskoPacTxt" promptText="Nazwisko" />
+                              <TextField fx:id="kodPoczPacTxt" promptText="Kod pocztowy" />
+                              <TextField fx:id="adresPacTxt" prefHeight="25.0" prefWidth="132.0" promptText="Adres" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <VBox prefHeight="100.0" prefWidth="300.0">
+                     <children>
+                        <TextField fx:id="imiePacTxt" promptText="Imię" />
+                        <TextField fx:id="peselPacTxt" promptText="PESEL" />
+                        <TextField fx:id="miastoPacTxt" promptText="Miasto" />
+                        <TextField fx:id="numerTelPacTxt" prefHeight="41.0" prefWidth="345.0" promptText="Numer telefonu" />
+                     </children>
+                  </VBox>
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -34,14 +62,16 @@
             </HBox>
          </top>
          <center>
-            <TableView prefHeight="403.0" prefWidth="810.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
+            <TableView fx:id="tableViewPacjenci" onMouseClicked="#getSelected" prefHeight="384.0" prefWidth="809.0" styleClass="tab" stylesheets="@../../../CSS/style.css" BorderPane.alignment="CENTER">
                <columns>
-                  <TableColumn prefWidth="128.0" text="Imię" />
-                  <TableColumn minWidth="0.0" prefWidth="144.0" text="Nazwisko" />
-                  <TableColumn prefWidth="150.0" text="PESEL" />
-                  <TableColumn minWidth="0.0" prefWidth="-1.0" text="Adres zamieszkania" />
-                  <TableColumn minWidth="0.0" prefWidth="97.0" text="kod pocztowy" />
-                  <TableColumn minWidth="0.0" prefWidth="173.0" text="Numer telefonu" />
+                  <TableColumn fx:id="idPacjentaCol" minWidth="-Infinity" prefWidth="51.0" text="Id" />
+                  <TableColumn fx:id="imiePacjentaCol" prefWidth="95.0" text="Imię" />
+                  <TableColumn fx:id="nazwiskoCol" minWidth="0.0" prefWidth="113.0" text="Nazwisko" />
+                  <TableColumn fx:id="peselCol" minWidth="-1.0" prefWidth="72.0" text="PESEL" />
+                  <TableColumn fx:id="adrespacjentaCol" minWidth="-1.0" prefWidth="123.0" text="Adres " />
+                  <TableColumn fx:id="kodPoczotwyCol" minWidth="0.0" prefWidth="76.0" text="Kod pocztowy" />
+                  <TableColumn fx:id="miastoCol" minWidth="0.0" prefWidth="81.0" text="Miasto" />
+                  <TableColumn fx:id="nrTelefonuPacjentaCol" minWidth="-1.0" prefWidth="138.0" text="Numer telefonu" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
