--- a/src/main/resources/com/example/przychodniastomatologicznav2/main.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/main.fxml
@@ -19,6 +19,18 @@
                         <Image url="@../../../Images/logo-no-background.png" />
                      </image>
                   </ImageView>
+                  <Button fx:id="btnHome" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="129.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Home">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../Images/home-page.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <padding>
+                        <Insets left="30.0" />
+                     </padding>
+                  </Button>
                         <Button fx:id="btnWizyty" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="234.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="191.0" stylesheets="@../../../CSS/style.css" text="Wizyty">
                             <graphic>
                                 <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
