--- a/src/main/resources/com/example/przychodniastomatologicznav2/pacjenci.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/pacjenci.fxml
@@ -47,7 +47,7 @@
                         </VBox>
                      </children>
                   </HBox>
-                  <VBox prefHeight="100.0" prefWidth="300.0">
+                  <VBox prefHeight="100.0" prefWidth="260.0">
                      <children>
                         <TextField fx:id="imiePacTxt" promptText="Imię" />
                         <TextField fx:id="peselPacTxt" promptText="PESEL" />
@@ -55,6 +55,7 @@
                         <TextField fx:id="numerTelPacTxt" prefHeight="41.0" prefWidth="345.0" promptText="Numer telefonu" />
                      </children>
                   </VBox>
+                  <TextField fx:id="searchInfo" promptText="Wyszukaj" />
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
