--- a/src/main/resources/com/example/przychodniastomatologicznav2/wizyty.fxml
+++ b/src/main/resources/com/example/przychodniastomatologicznav2/wizyty.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,19 +17,19 @@
          <top>
             <HBox prefHeight="90.0" prefWidth="809.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox prefHeight="87.0" prefWidth="160.0">
+                  <VBox prefHeight="87.0" prefWidth="228.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#Add" prefHeight="25.0" prefWidth="134.0" style="-fx-background-color: #0fdba8;" text="Dodaj wizyte">
+                        <Button mnemonicParsing="false" onAction="#Add" prefHeight="25.0" prefWidth="170.0" style="-fx-background-color: #0fdba8;" text="Dodaj wizyte">
                            <VBox.margin>
                               <Insets top="4.0" />
                            </VBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#Edit" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: #fcba03;" text="Edytuj wizyte">
+                        <Button mnemonicParsing="false" onAction="#Edit" prefHeight="25.0" prefWidth="170.0" style="-fx-background-color: #fcba03;" text="Edytuj wizyte">
                            <VBox.margin>
                               <Insets top="4.0" />
                            </VBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="134.0" style="-fx-background-color: #f54269;" text="Usuń wizyte">
+                        <Button mnemonicParsing="false" onAction="#Delete" prefHeight="25.0" prefWidth="170.0" style="-fx-background-color: #f54269;" text="Usuń wizyte">
                            <VBox.margin>
                               <Insets top="4.0" />
                            </VBox.margin>
@@ -55,11 +56,21 @@
                         <Insets top="4.0" />
                      </HBox.margin>
                   </TextField>
-                  <TextField fx:id="dataWizytytxt" layoutX="646.0" layoutY="34.0" prefHeight="25.0" prefWidth="145.0" promptText="data wizyty">
-                     <HBox.margin>
-                        <Insets top="4.0" />
-                     </HBox.margin>
-                  </TextField>
+                  <VBox prefHeight="87.0" prefWidth="236.0">
+                     <children>
+                        <TextField fx:id="dataWizytytxt" prefHeight="25.0" prefWidth="197.0" promptText="data wizyty">
+                           <VBox.margin>
+                              <Insets top="4.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <Label prefHeight="35.0" prefWidth="193.0" text="Format daty: yyyy-MM-dd hh:mm">
+                           <VBox.margin>
+                              <Insets left="4.0" />
+                           </VBox.margin>
+                        </Label>
+                        <TextField fx:id="searchInfo" prefHeight="31.0" prefWidth="185.0" promptText="Wyszukaj" />
+                     </children>
+                  </VBox>
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
